@@ -327,9 +327,6 @@
 
 /*------------------------------TAB BAR---------------------------------*/
 
-/* The extra height (in percent) the active tab should have. */
-#define ATAB_EXTRA_PERCENT (33)
-
 /* Default title of new tabs if unspecified */
 #define DEFAULT_TAB_TITLE	"Terminal"
 
